--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,10 +4,10 @@
 
             <section class="profile-self-ads-section">
                 <h5>Annonser</h5>
-                <% if @user.ads.published.empty? %>
+                <% if @user.published_ads.empty? %>
                   Brukeren har ikke lagt ut noe til leie ennå.
                 <% else %>
-                  <%= render partial: "shared/slim_promoted_ad", collection: @user.ads.published, as: :ad %>
+                  <%= render partial: "shared/slim_promoted_ad", collection: @user.published_ads, as: :ad %>
                 <% end %>
             </section>
 
