--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,8 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="six columns">
-            <div class="u-push-down">
-                <h4>Mine annonser</h4>
+            <%= render layout: "bubble_box", locals: {title: "Mine annonser"} do %>
                 <% unless current_user.ads.empty? %>
                     <ul>
                         <% current_user.ads.each do |ad| %>
@@ -19,17 +18,16 @@
                     Du har ikke publisert noen annonser ennå.
                 <% end %>
                 <%= button_to "Legg ut en ny annonse", new_ad_path, method: "get" %>
-            </div>
+            <% end %>
 
-            <div class="u-push-down">
-                <h4>Utestående vurderinger</h4>
-                <div>Placeholder</div>
-            </div>
+            <%= render layout: "bubble_box", locals: {title: "Utestående vurderinger", color: "blue"} do %>
+                <div>Ingen utestående vurderinger.</div>
+            <% end %>
         </div>
 
         <div class="six columns">
-            <div class="u-push-down">
-                <h4>Forespørsler</h4>
+
+            <%= render layout: "bubble_box", locals: {title: "Forespørsler", color: "red"} do %>
                 <% unless current_user.current_bookings.empty? %>
                     <ul>
                         <% current_user.current_bookings.each do |booking| %>
@@ -41,11 +39,11 @@
                         <% end %>
                     </ul>
                 <% else %>
-                        Du har ingen åpne sendte eller mottatte forespørsler
+                    Du har ingen åpne sendte eller mottatte forespørsler
                 <% end %>
-            </div>
+            <% end %>
 
-            <div class="u-push-down">
+            <%= render layout: "bubble_box", locals: {title: "Forespørsler", color: "green"} do %>
                 <h4>Siste meldinger</h4>
                 <% unless current_user.received_messages.empty? %>
                     <ul>
@@ -60,7 +58,7 @@
                 <% else %>
                     Du ikke mottatt noen meldinger
                 <% end %>
-            </div>
+            <% end %>
 
             <%= render layout: "gray_box", locals: {title: "Flere valg"} do %>
                 <ul>
@@ -71,15 +69,6 @@
 
             <% end %>
 
-            <%= render layout: "bubble_box", locals: {title: "Utestående vurderinger"} do %>
-
-                <a href="#">
-                    <%= render('shared/avatar.html', user: current_user, size: "medium" ) %>
-                    <h2>Jan Erik<br><small>11.09.2015</small></h2>
-                    <p>thule henger morradi er mann</p>
-                </a>
-
-            <% end %>
         </div>
     </div>
 </div>
