Sprakrad approved spelling of e-post

--- a/app/views/ads/_ad_input_copy.html.erb
+++ b/app/views/ads/_ad_input_copy.html.erb
@@ -11,7 +11,7 @@
     <h4>Verifisering</h4>
 
     <p>
-        Plendit verifiserer brukernes identitet med mobilnummer og epost. I tillegg kan brukerne
+        Plendit verifiserer brukernes identitet med mobilnummer og e-post. I tillegg kan brukerne
         koble seg til plendit med Google-, Facebook- og SPiD-kontoer.
     </p>
 
