--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -378,6 +378,18 @@ form {
   display: inline;
 }
 
+details.u-implode-summary {
+  outline: none;
+}
+
+details.u-implode-summary[open] > summary {
+  display: none;
+}
+
+details.u-implode-summary > summary::-webkit-details-marker {
+  display: none;
+}
+
 @media (min-width: 550px) {
   .u-hidden-when-grid {
     display: none;
