Make sure flash bar is not under top bar

--- a/app/assets/stylesheets/_flash_bar.scss
+++ b/app/assets/stylesheets/_flash_bar.scss
@@ -6,4 +6,15 @@
     color: black;
     font-weight: bold;
 
+    &--overlaid {
+        position: absolute;
+        top: 52px;
+        left: 0;
+        width: 100%;
+        z-index: 12;
+    }
+
 }
+
+
+
