--- a/app/views/application/_flash_bar.html.erb
+++ b/app/views/application/_flash_bar.html.erb
@@ -1,5 +1,8 @@
+<% 
+    overlaid = !(defined? overlaid).nil? && overlaid
+%>
 <% if notice or alert %>
-    <div class="flash-bar">
+    <div class="flash-bar <%=  overlaid ? "flash-bar--overlaid" : "" %>">
         <div class="container">
             <% if notice %>
                 <%= notice %>
