--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 <body>
     <header>
         <%= render partial: "top_bar", locals: { hide_search_field: @hide_search_field, overlaid: @overlaid_top_bar } %>
-        <%= render partial: "flash_bar" %>
+        <%= render partial: "flash_bar", locals: { overlaid: @overlaid_top_bar } %>
     </header>
 
     <%= content_for?(:content) ? yield(:content) : yield %>
