--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -114,7 +114,7 @@
 
         <div class="row">
             <div class="twelve columns">
-                <%= f.submit "Oppdater", class: "u-pull-right button-primary" %>
+                <%= f.submit "Oppdater", class: "u-pull-right button" %>
             </div>
         </div>
     <% end %>
