--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -60,7 +60,7 @@
               </div>
 
               <div class="actions">
-                <%= f.submit "Sign up" %>
+                <%= f.submit "Sign up", class: "button button-primary" %>
               </div>
             <% end %>
 
