--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -161,10 +161,8 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
-a:hover {
-  xxcolor: #0FA0CE; }
-
+  color: $color-plendit-blue;
+}
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -175,33 +173,39 @@ a:hover {
   color: #555;
   text-align: center;
   font-size: 11px;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 38px;
   letter-spacing: .1rem;
-  /*text-transform: uppercase;*/
+  text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
+  background-color: #fff;
   border-radius: 4px;
-  border: 1px solid #bbb;
+  border: 1px solid rgba(#000, 0.15);
   cursor: pointer;
-  box-sizing: border-box; }
-.button:hover,
-.button:focus {
-  color: #333;
-  border-color: #888;
-  outline: 0; }
-.button.button-primary {
-  color: #FFF;
-  background-color: #2a96ff;
-  border-color: transparent; /* #33C3F0; */ }
-.button.button-primary:hover,
-.button.button-primary:focus {
-  xxcolor: #FFF;
-  xxbackground-color: #1EAEDB;
-  border-color: transparent; /* #1EAEDB; */
-  text-decoration: underline;
+  box-sizing: border-box;
+  user-select: none;
+
+  &:hover, &:focus {
+    background-color: darken(#fff, 3);
   }
+  &:active {
+    background-color: darken(#fff, 5);
+  }
+
+  &.button-primary {
+    color: #fff;
+    background-color: $color-plendit-blue;
+
+    &:hover, &:focus {
+      background-color: darken($color-plendit-blue, 5);
+    }
+    &:active {
+      background-color: darken($color-plendit-blue, 10);
+    }
+  }
+
+}
 
 
 /* Forms
