--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -117,10 +117,12 @@
 </div>
 
 <div>
-    <%= button_tag "lagre", class: "button button", form_class: "u-inline", data: {controller: "submitMainForm"}  %>
-    <%= button_to "Gå til annonse", (ad_path @ad), method: :get, form_class: "u-inline", class: "button"  %>
-
     <% if @ad.valid? %>
         <%= button_to 'Send til publisering', submit_for_review_ad_path(@ad), form_class: "ad-status-box__form u-inline", class: "button button-primary" %>
+        <%= button_tag "lagre", class: "button", form_class: "u-inline", data: {controller: "submitMainForm"}  %>
+    <% else %>
+        <%= button_tag "lagre", class: "button button-primary", form_class: "u-inline", data: {controller: "submitMainForm"}  %>
     <% end %>
+
+    <%= button_to "Forhåndsvisning", (ad_path @ad), method: :get, form_class: "u-inline", class: "button"  %>
 </div>
