--- a/app/views/ads/list.html.erb
+++ b/app/views/ads/list.html.erb
@@ -15,7 +15,7 @@
                     annonser og gjøre ditt valg via nedtrekksmenyen under.
                 </p>
                 <p>
-                    <%= link_to 'Legg inn en ny annonse', new_ad_path %>
+                    <%= button_to "Legg ut en ny annonse", new_ad_path, method: "get", class: "button button-primary" %>
                 </p>
             <% end %>
 
