--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -8,7 +8,7 @@
                         <div class="new-ad-category-selector__icon">
                             <%= image_tag a[:image], size: '76x63' %>
                         </div>
-                        <h5 class="new-ad-category-selector__title"><%= a[:title] %></h5>
+                        <div class="new-ad-category-selector__title"><%= a[:title] %></div>
                     <% end %>
                 <% end %>
             </div>
