--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
                 <% else %>
                     Du har ikke publisert noen annonser ennå.
                 <% end %>
-                <%= button_to "Legg ut en ny annonse", new_ad_path, method: "get" %>
+                <%= button_to "Legg ut en ny annonse", new_ad_path, method: "get", class: "button button-primary" %>
             <% end %>
 
             <%= render layout: "bubble_box", locals: {title: "Utestående vurderinger", color: "blue"} do %>
