Aligning headers:  - Skeleton: Reducing number of header styles. Giving headers more top padding, less bottom margin. Adjusting weights to align better with mockups.  - Removing duplicate header for "Siste meldinger".  - Placing "Populære kategorier" closer to its content.  - Made ad title a proper h1.  - Made bubble box titles h2s.  - Aligned "ad_booking box" __title and __period to mockup.
Bonus:
 - Removed indentation of ad copy.
 - Increased footer padding.
 - Made "ad_booking box" more closely resemble the design.

--- a/app/assets/stylesheets/_gray_box.scss
+++ b/app/assets/stylesheets/_gray_box.scss
@@ -3,6 +3,7 @@
 .gray-box {
     border: solid thin $color-box-border;
     background-color: white;
+    margin-bottom: $standard-spacing * 2;
 
     &__title {
         background-color: $color-gray-background;
