--- a/app/assets/stylesheets/_main_footer.scss
+++ b/app/assets/stylesheets/_main_footer.scss
@@ -4,6 +4,7 @@
     background-color: black;
     color: white;
     padding-top: $standard-spacing * 3;
+    padding-bottom: $standard-spacing * 3;
 
     &__list {
         list-style: none;
