--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,6 +10,7 @@ $blueish: rgb(213, 235, 255);
 
 
 .bubble-box {
+    margin-bottom: $standard-spacing * 2;
 
     &__title {
         margin-bottom: $standard-spacing / 2;
