--- a/app/views/application/_notifications.html.erb
+++ b/app/views/application/_notifications.html.erb
@@ -5,7 +5,7 @@
     <div class="notification-box u-hidden" data-floating-notifications>
         <span class="notification-box__up-triangle"></span>
         <div class="notification-box__top">
-            <span>Varsler</span>
+            <h4>Varsler</h4>
         </div>
 
         <ol class="notification-box__list">
