--- a/app/assets/stylesheets/_ad_booking_box.scss
+++ b/app/assets/stylesheets/_ad_booking_box.scss
@@ -2,8 +2,8 @@
 
 .ad-booking-box {
     position: relative;
-    background-color: $color-background;
-    border: solid thin $color-box-border;
+    box-shadow: 0 0 1px rgba(black, 0.2),
+                0 1px 2px rgba(black, 0.3);
 
     @media screen and (min-width: 640px) {
         top: -45px;
@@ -11,22 +11,25 @@
     }
 
     &__title {
-        background-color: $color-plendit-blue;
+        background-color: rgba($color-plendit-blue, 0.9);
         color: white;
-        padding: $standard-spacing / 2;
+        padding: $standard-spacing*0.74 $standard-spacing;
         margin-bottom: 0;
     }
 
     &__calendar-holder {
         text-align: center;
+        background-color: $color-background;
     }
 
     &__button-holder {
         text-align: center;
+        padding: $standard-spacing * 2;
     }
 
     &__period {
         font-size: 70%;
         float: right;
+        margin-top: 0.5rem;
     }
 }
