--- a/app/assets/stylesheets/_ad_copy_section.scss
+++ b/app/assets/stylesheets/_ad_copy_section.scss
@@ -1,9 +1,5 @@
 @import 'constants.scss';
 
 .ad-copy-section {
-    margin-top: $standard-spacing;
-
-    &__body {
-        padding: $standard-spacing;
-    }
+    &__body {}
 }
