--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -43,8 +43,7 @@
                 <% end %>
             <% end %>
 
-            <%= render layout: "bubble_box", locals: {title: "Meldinger", color: "green"} do %>
-                <h4>Siste meldinger</h4>
+            <%= render layout: "bubble_box", locals: {title: "Siste meldinger", color: "green"} do %>
                 <% unless current_user.received_messages.empty? %>
                     <ul>
                         <% current_user.received_messages.each do |message| %>
