Design: Adding drop shadows to the _gray_box, adjusting colors and padding.

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -9,7 +9,7 @@ $color-box-border: #9b9b9b;
 $color-gray-text: #454649;
 
 $color-gray-background: #d4d4d4; // rgb(212,212,212);
-$color-subtle-gray-background: #dee1df;
+$color-subtle-gray-background: #e5e7e5;
 
 $color-button-delete: #be0027;
 $color-button-good: #36b984;
