--- a/app/assets/stylesheets/_front_search_block.scss
+++ b/app/assets/stylesheets/_front_search_block.scss
@@ -21,9 +21,15 @@
         flex-direction: column;
     }
 
-    &__bgimg {
+    &__link {
         flex-grow: 1;
+        text-decoration: none;
         display: flex;
+        user-select: none;
+        color: white;
+        font-size: 2rem;
+        text-shadow: 0 1px 10px rgba(black, 0.7),
+                     0 1px 2px rgba(black, 0.5);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 50% 50%;
@@ -39,9 +45,9 @@
             margin: 2px;
         }
 
-        // Fancy shadow effect thingy
-        &:before, &:after
-        {
+        /* Fancy shadow effect thingy */
+        &:before,
+        &:after {
           z-index: -1;
           position: absolute;
           content: "";
@@ -61,8 +67,7 @@
           transform: rotate(-3deg);
         }
 
-        &:after
-        {
+        &:after {
           -webkit-transform: rotate(3deg);
           -moz-transform: rotate(3deg);
           -o-transform: rotate(3deg);
@@ -71,17 +76,24 @@
           right: 10px;
           left: auto;
         }
-    }
 
-    &__link {
-        background-color: rgba(0,0,0, 0.45);
-        color: white;
-        padding: $standard-spacing / 2;
-        border-radius: 4px;
-        min-width: 70%;
-        text-decoration: none;
-    }
-
-    &__title {
+        &__title:before {
+          content: "";
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          background-color: rgba(black, 0);
+          transition: 0.4s;
+        }
+        &:hover &__title:before, &:focus &__title:before {
+          transition: 0s;
+          background-color: rgba(black, 0.1);
+        }
+        &:active &__title:before {
+          transition: 0s;
+          background-color: rgba(black, 0.25);
+        }
     }
 }
