Fetch card info from form and clean it Find card type Detect errors skeleton code Send registration skeleton code

--- a/app/views/users/_edit_credit_card.html.erb
+++ b/app/views/users/_edit_credit_card.html.erb
@@ -36,6 +36,7 @@
             </div>
             <div class="row">
                 <button type="submit" data-save-card class="u-pull-right button button-primary">Lagre kort</button>
+                <%= evil_icon 'ei-spinner-2', size: 'm', class: 'u-fill-green u-pull-right u-hidden' %>
             </div>
         </form>
     </div>
