Added decorator for feedback model Make sure feedback controller returns decorated models Use feedback_item_box for list received feedback Style improvements for feedback item

--- a/app/assets/stylesheets/_feedback_item_box.scss
+++ b/app/assets/stylesheets/_feedback_item_box.scss
@@ -1,11 +1,16 @@
 @import 'constants.scss';
 
 .feedback-item-box {
+    background-color: white;
+    border-bottom: solid thin $color-box-border;
+    padding-top: $standard-spacing;
+
     &__avatar-box {
         text-align: center;
     }
 
     &__body {
         padding-top: $standard-spacing;
+        padding-right: $standard-spacing;
     }
 }
