--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="eight columns">
 
-            <section class="profile-self-ads-section">
-                <h5>Annonser</h5>
+            <section class="profile-self-ads-section u-push-down">
+                <h2>Annonser</h2>
                 <% if @user.published_ads.empty? %>
                   Brukeren har ikke lagt ut noe til leie ennå.
                 <% else %>
