--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -63,7 +63,7 @@
             <%= render layout: "gray_box", locals: {title: "Flere valg"} do %>
                 <ul>
                     <li><%= link_to "Verifisering",     "#" %></li>
-                    <li><%= link_to "Tilbakemeldinger", "#" %></li>
+                    <li><%= link_to "Tilbakemeldinger", users_feedbacks_path %></li>
                     <li><%= link_to "See / edit my locations", locations_path %></li>
                 </ul>
 
