--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -69,7 +69,7 @@
 
                     <%= f.fields_for :location, Location.new(user_id: current_user.id) do |fl| %>
                         <%= fl.text_field :address_line, class: 'u-full-width', placeholder: 'Gateadresse' %>
-                        <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= resources_postal_place_path %>">
+                        <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= postal_place_path %>">
                             <div class="four columns">
                                 <%= fl.number_field :post_code, class: "u-full-width", placeholder: "Postnr.", data: {"postal-code" => ""} %>
                             </div>
@@ -90,7 +90,7 @@
 
             <%= f.fields_for :location, Location.new(user_id: current_user.id) do |fl| %>
                 <%= fl.text_field :address_line, class: 'u-full-width', placeholder: 'Gateadresse' %>
-                <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= resources_postal_place_path %>">
+                <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= postal_place_path %>">
                     <div class="four columns">
                         <%= fl.number_field :post_code, class: "u-full-width", placeholder: "Postnr.", data: {"postal-code" => ""} %>
                     </div>
