owned_ad_item should use props from decorator, not model Make sure ad list in my ads is decorated

--- a/app/views/ads/_owned_ad_item.html.erb
+++ b/app/views/ads/_owned_ad_item.html.erb
@@ -3,11 +3,11 @@
    ad = AdDecorator.new(ad)
 %>
 <div class="owned-ad-item">
-    <h5><%= link_to( (ad.title || 'Ingen tittel'), edit_ad_path(ad) ) %></h5>
+    <h5><%= link_to ad.display_title, edit_ad_path(ad) %> <small><%= ad.display_status %></small></h5>
     <p>
         <%# fixme: set size here %>
         <%= image_tag ad.safe_image_url(:thumb), alt: "", class: "u-pull-right owned-ad-item__thumb" %>
-        <%= ad.body || "No body" %>
+        <%= ad.summary %>
     </p>
-    <p><%= ad.updated_at.to_formatted_s(:plendit_short_datetime) %> STATUS: <%= ad.display_status %></p>
+    <p>Oppdatert <%= ad.updated_at.to_formatted_s(:plendit_short_datetime) %></p>
 </div>
