--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -32,7 +32,7 @@
 
 <div class="explainer-video-section">
     <details>
-        <summary><h4 class="explainer-video-section__title">Se hvordan det fungerer</h4></summary>
+        <summary><div class="explainer-video-section__title button">Se hvordan det fungerer</div></summary>
         <iframe width="560" height="315" src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
     </details>
 </div>
