Made feedback routes and autogenerated view work againl. Mostly to have somewhere make the design before refactoring feedback stuff

--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -18,5 +18,5 @@
   <%= @feedback.body %>
 </p>
 
-<%= link_to 'Edit', edit_feedback_path(@feedback) %> |
-<%= link_to 'Back', feedbacks_path %>
+<%= link_to 'Edit', edit_users_feedback_path(@feedback) %> |
+<%= link_to 'Back', users_feedback_path %>
