--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@feedback) do |f| %>
+<%= form_for(@feedback, url: {action: "create", controller: "feedbacks"}) do |f| %>
   <% if @feedback.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@feedback.errors.count, "error") %> prohibited this feedback from being saved:</h2>
