--- a/app/views/feedbacks/edit.html.erb
+++ b/app/views/feedbacks/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @feedback %> |
-<%= link_to 'Back', feedbacks_path %>
+<%= link_to 'Show', users_feedback_path(@feedback) %> |
+<%= link_to 'Back', users_feedbacks_path %>
