--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,6 @@
 
             <%= render partial: "edit_profile" %>
             <%= render partial: "edit_registration" %>
-            <%= render partial: "edit_credit_card" %>
 
             <%= render layout: "gray_box", locals: {title: "Bytte Profilbilde", id: "profile-image"} do %>
               <%= render('profile_image_box.html', user: current_user) %>
@@ -28,7 +27,7 @@
                 <ul>
                     <li><%= link_to "Rediger personalia", anchor: "personal-info" %></li>
                     <li><%= link_to "Bytte passord", anchor: "password" %></li>
-                    <li><%= link_to "Legg til kredittkort", anchor: "credit-card" %></li>
+                    <li><%= link_to "Legg til kredittkort", user_payment_cards_path %></li>
                     <li><%= link_to "Bytte profilbilde", anchor: "profile-image" %></li>
                     <li><%= link_to "Rediger adresser", anchor: "locations" %></li>
                     <li><%= link_to "Rediger tilkoblede kontoer", anchor: "identities" %></li>
