--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -2,4 +2,8 @@
 
 <p>You can confirm your account email through the link below:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<%
+    # only_patch should probably be replaced with proper config. Error was this when loading seeds
+    # ActionView::Template::Error: Missing host to link to! Please provide the :host parameter, set default_url_options[:host], or set :only_path to true
+ %>
+<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token, only_path: true) %></p>
