--- a/app/views/feedbacks/edit.html.erb
+++ b/app/views/feedbacks/edit.html.erb
@@ -1,3 +1,15 @@
+
+<div class="container">
+    <div class="row">
+        <div class="twelve columns">
+
+            <h2 class="u-push-down">Gi en tilbakemelding til <%= @feedback.ad.user.display_name %></h2>
+        </div>
+    </div>
+</div>
+
+
+
 <h1>Editing Feedback</h1>
 
 <%= render 'form' %>
