--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,14 +1,20 @@
-<h2>Resend confirmation instructions</h2>
+<div class="container u-push-down">
+    <div class="row">
+        <div class="twelve columns">
+            <h2>E-post for å bekrefte bruker</h2>
+            <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+                <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+                <div class="field">
+                    <%= f.label :email %><br />
+                    <%= f.email_field :email, autofocus: true %>
+                </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+                <div class="actions">
+                    <%= f.submit "Send e-post", class: "button button-primary" %>
+                </div>
+            <% end %>
 
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions", class: "button button-primary" %>
-  </div>
-<% end %>
+        </div>
+    </div>
+</div>
