--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,25 @@
-<p>Hello <%= @resource.email %>!</p>
+<div class="container u-push-down">
+    <div class="row">
+        <div class="twelve columns">
+            <h2>Tilbakestill passord</h2>
+            <p>
+                Hei <%= @resource.email %>!
+            </p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+            <p>
+                Noen har bedt om en lenke for å endre plendit-passord. Du kan følge denne lenken for
+                å gjøre det:
+                <%= link_to 'Endre passord', edit_password_url(@resource, reset_password_token: @token) %>
+            </p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+            <p>
+                Hvis du ikke har bedt om å endre passord kan du ignorere denne e-posten
+            </p>
+        </div>
+    </div>
+</div>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+
+
+
+
