Added utility class to make things look like links

--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -393,6 +393,11 @@ form {
   display: inline;
 }
 
+.u-link-like {
+  color: $color-plendit-blue;
+  text-decoration: underline;
+}
+
 details.u-implode-summary {
   outline: none;
 }
