--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,12 +3,6 @@
         <div class="twelve columns">
 
             <h2>Bli en plendit-bruker</h2>
-
-            <p>
-
-
-            </p>
-
             <p>
                 Hvis du allerede har en konto på <strong>Facebook</strong>, hos
                 <strong>Google</strong> eller på <strong>SPiD</strong> kan du
@@ -17,66 +11,81 @@
                 <strong>Aftenposten</strong> eller <strong>FINN</strong> allerede, så kan du logge rett inn.
             </p>
 
-            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render partial: "users/provider_logins" %>
 
-                <%= devise_error_messages! %>
+            <hr>
 
-                <%= f.hidden_field( :personhood, value: 'natural' ) %>
+            <p>
+                Hvis du foretrekker det kan du opprette en egen plendit-konto under:
+            </p>
 
-                <div class="row">
-                    <div class="two-thirds column">
-                        <%= f.label :first_name, "Fornavn:" %>
-                        <%= f.text_field :first_name, autofocus: true %>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="two-thirds column">
-                        <%= f.label :last_name, "Etternavn:" %>
-                        <%= f.text_field :last_name %>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="two-thirds column">
-                        <%= f.label :birthday, "Fødselsdato:" %>
-                        <%= f.date_field :birthday %>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="two-thirds column">
-                        <%= f.label :email, "E-post:" %>
-                        <%= f.email_field :email %>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="two-thirds column">
-                        <%= f.label :unconfirmed_phone_number, "Telefonnummer:" %>
-                        <%= f.text_field :unconfirmed_phone_number, :maxlength=>"8" %>
-                    </div>
-                </div>
-
-                <div class="field">
-                    <%= f.label :password %>
-                    <%= f.password_field :password, autocomplete: "off" %>
-                </div>
-
-              <div class="field">
-                <%= f.label :password_confirmation %>
-                <%= f.password_field :password_confirmation, autocomplete: "off" %>
-              </div>
-
-              <div class="actions">
-                <%= f.submit "Opprett konto", class: "button button-primary" %>
-              </div>
+            <% if resource.errors.empty? %>
+                <details class="u-implode-summary">
+                    <summary><h2 class="u-link-like">Lag en konto</h2></summary>
             <% end %>
+                <div>
+                    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
+                        <%= devise_error_messages! %>
 
+                        <%= f.hidden_field( :personhood, value: 'natural' ) %>
+
+                        <div class="row">
+                            <div class="two-thirds column">
+                                <%= f.label :first_name, "Fornavn:" %>
+                                <%= f.text_field :first_name, autofocus: true %>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="two-thirds column">
+                                <%= f.label :last_name, "Etternavn:" %>
+                                <%= f.text_field :last_name %>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="two-thirds column">
+                                <%= f.label :birthday, "Fødselsdato:" %>
+                                <%= f.date_field :birthday %>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="two-thirds column">
+                                <%= f.label :email, "E-post:" %>
+                                <%= f.email_field :email %>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="two-thirds column">
+                                <%= f.label :unconfirmed_phone_number, "Telefonnummer:" %>
+                                <%= f.text_field :unconfirmed_phone_number, :maxlength=>"8" %>
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <%= f.label :password %>
+                            <%= f.password_field :password, autocomplete: "off" %>
+                        </div>
+
+                        <div class="field">
+                            <%= f.label :password_confirmation %>
+                            <%= f.password_field :password_confirmation, autocomplete: "off" %>
+                        </div>
+
+                        <div class="actions">
+                            <%= f.submit "Opprett konto", class: "button button-primary" %>
+                        </div>
+                    <% end %>
+
+                </div>
+            <% if resource.errors.empty? %>
+                </details>
+            <% end %>
         </div>
     </div>
-
 
 </div>
 
