Tweaked some strings Removed an unneccessary :notice

--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -38,7 +38,7 @@
             </a>
             |
             <span class="top-bar__top-section">
-                <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => "top-bar__navbar-link" %>
+                <%= link_to "Logg ut", destroy_user_session_path, method: :delete, :class => "top-bar__navbar-link" %>
             </span>
 
         <% else %>
