--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -75,7 +75,7 @@
             <div>Currently waiting confirmation for: <%= @user.unconfirmed_email %>. Check your email for instructions on how to confirm it.
             To have the email resent, please go <%= link_to "here", new_user_confirmation_path %>. Your previous email will be kept on file until you have verified the new one.
             </div>
-            <%# TODO(RA): make the link a post to the user's current email.
+            <%# FIXME(RA): make the link a post to the user's current email.
             link_to "here", user_confirmation_path, method: :post, {email: @user.email} ###or similar?%>
         <% else %>
             <div>
@@ -94,7 +94,7 @@
         <% if @user.phone_pending_confirmation? %>
             <div>
                 Currently waiting confirmation for: <%= @user.unconfirmed_phone_number %>. Last confirmed number: <%= @user.phone_number %>. Please confirm your new number <%= link_to 'here', verify_sms_users_path %>. If you need a new sms sent, please click <%= link_to 'here', '#' %>.
-                <%# TODO(RA): Create a page to send a New SMS. Should refuse to send too often, otherwise we go bankrupt. %>
+                <%# FIXME(RA): Create a page to send a New SMS. Should refuse to send too often, otherwise we go bankrupt. %>
             </div>
         <% else %>
             <div>
